discussion/kv_engine/155140/155140_rev14_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Remove implicit creation of the ExecutorPool

Make sure it is explicitly created before it is used. This is
mostly a "test issue" as the memcached core explicitly create
the pool before starting to accept clients (and shut it down
as part of shutdown)

Change-Id: I36786a844de7dea359bf0cb5ecba77b086e96f52

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 04:48:26.000000000
Message: 
Uploaded patch set 14: Patch Set 13 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 06:26:26.000000000
Message: 
Patch Set 14: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9747/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9747/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10:
error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9747/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19324/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8341/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36709/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/271/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31376/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11469/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10393/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11321/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11746/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 07:02:44.000000000
Message: 
Patch Set 14:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9747/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9747/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10:
error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9747/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19335/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8341/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36709/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/271/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31376/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11469/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10393/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11321/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11746/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 07:54:17.000000000
Message: 
Patch Set 14:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9747/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9747/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10:
error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9747/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8341/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36709/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/271/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31376/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11469/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10393/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11321/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11746/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19337/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 07:56:34.000000000
Message: 
Patch Set 14: Verified+1

override clang-tidy - not introduced by the change
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 07:59:53.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-11 08:01:23.000000000
Message: 
Patch Set 14: Code-Review-1

(2 comments)

-1 for the commented out code.
Line:66, executor/executorpool.cc -> Commented out code.

Line:302, programs/engine_testapp/engine_testapp.cc -> Note folly has a helper for this - makeGuard:

 auto executorBoarderGuard = folly::makeGuard([]{ ExecutorPool::shutdown(); });

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 08:08:35.000000000
Message: 
Patch Set 14:

(2 comments)
Line:66, executor/executorpool.cc -> Done

Line:302, programs/engine_testapp/engine_testapp.cc -> Done

----------------------------------------------------------------------------------------------------------------------
